# volttx

./: .gitignore
game-repo--main/copia-main/: .gitignore  webgl_sharing
game-repo--main/copia-main/666../: index.html
game-repo--main/copia-main/666../StreamingAssets/: UnityServicesProjectConfiguration.json
game-repo--main/copia-main/Assets/: 666.unity  DefaultNetworkPrefabs.asset  GameObject.prefab  mana.cs  mana2.cs  mein.unity  test.asset  trez8.unity
game-repo--main/copia-main/Assets/Editor/: AddCubeControllerToPrefabList.cs  CheckNetworkManager.cs  DiagnoseInput.cs  FixInputHandler.cs  (+5 more)
game-repo--main/copia-main/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  MultiplayerManager.asset  ProjectSettings.asset  TagManager.asset  VirtualProjectsConfig.json
game-repo--main/copia-main/backend-rust/: .env.example  Cargo.toml  README.md
game-repo--main/copia-main/backend-rust/migrations/: 0001_init.sql  0002_challenges_and_server_pool.sql
game-repo--main/copia-main/backend-rust/src/: app_state.rs  config.rs  error.rs  main.rs
game-repo--main/copia-main/backend-rust/src/api/: admin.rs  challenges.rs  internal_auth.rs  matches.rs  mod.rs  servers.rs
game-repo--main/copia-main/backend-rust/src/db/: chain_jobs.rs  matches.rs  mod.rs  used_nonces.rs
game-repo--main/copia-main/backend-rust/src/models/: dto.rs  enums.rs  mod.rs
game-repo--main/copia-main/backend-rust/src/solana/: client.rs  game_account.rs  mod.rs  pda.rs
game-repo--main/copia-main/backend-rust/src/worker/: finalizer.rs  mod.rs  timeout_watcher.rs
(+91 files in other folders)
